--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <div class="table-header">
           <h2>Course</h2>
           <div class="form">
-            Add Course <input type="text" name="" value="" placeholder="Add Course" required>
-            <input type="button" name="" value="Submit" >
+            Add Course <input type="text" name="" value="" placeholder="Add Course" required class="add-course">
+            <input type="button" name="" value="Submit" class="add-btn" >
 
           </div>
         </div>
