--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="table-header">
           <h2>Student <a href="#" class="btn-add">Add Student</a></h2>
           <div class="search">
-            Search <input type="text" name="" value="" placeholder="Search">
+            Search <input type="text" id="search" value="" placeholder="Search">
           </div>
         </div>
         <div class="table-body-1">
